publish add field data

--- a/config/config_kovan.json
+++ b/config/config_kovan.json
@@ -11,6 +11,7 @@
   },
   "node": {
     "server": "wss://kovan.infura.io/ws/v3/e17969db9bc94e75a474b3d3c5257a75",
-    "contract": "0xA3a92fBbCEE65Fe0ef67756086e83d8676ec131a"
+    "contract": "0x51fC15CA47034bDF62F6e0fd0E37AB389832994C",
+    "from": 10483032
   }
 }
