--- a/config/config_kovan.json
+++ b/config/config_kovan.json
@@ -11,7 +11,6 @@
   },
   "node": {
     "server": "wss://kovan.infura.io/ws/v3/e17969db9bc94e75a474b3d3c5257a75",
-    "contract": "0x51fC15CA47034bDF62F6e0fd0E37AB389832994C",
-    "from": 10491971
+    "contract": "0xA3434f0ABAC66f46ABCf2E6c47488C00aA1980Cb"
   }
 }
